# cpp_python_project_template

./: .buildinfo  .gitignore  CONTRIBUTING.md  Doxyfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/architecture/: index.doctree  overview.doctree
.doctrees/architecture/components/: component-template.doctree  index.doctree
.doctrees/code/: index.doctree
.doctrees/code/cpp_pkgs/: cpp_pkg.doctree  index.doctree
.doctrees/code/py_pkgs/: index.doctree  py_pkg.doctree
.doctrees/usage/examples/: example_1.doctree  example_2.doctree  index.doctree
.github/workflows/: format-lint.yml  lint-format.yml
_sources/: index.rst.txt
_sources/architecture/: overview.md.txt
_sources/architecture/components/: component-template.md.txt  index.rst.txt
_sources/usage/examples/: example_1.md.txt  example_2.md.txt
architecture/: index.html  overview.html
architecture/components/: component-template.html  index.html
code/: index.html
code/cpp_pkgs/: cpp_pkg.html  index.html
code/py_pkgs/: index.html  py_pkg.html
docs/: README.md  conf.py  index.rst
docs/architecture/: index.rst
docs/doxygen/html/: annotated.html  classes.html  classmath__utils_1_1_calculator-members.html  classmath__utils_1_1_calculator.html  (+20 more)
lib/: README.md
lib/cpp_pkg/: CMakeLists.txt
lib/py_pkg/: pyproject.toml
lib/py_pkg/src/py_pkg/: math_utils.py  module.py  string_utils.py
lib/py_pkg/tests/: test_main.py
usage/examples/: example_1.html  example_2.html  index.html
(+17 files in other folders)
