[project]
name = "py-pkg"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan Mansour",email = "alama@dtu.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "py_pkg", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "B"]  # E: pycodestyle, F: pyflakes, I: isort, B: flake8-bugbear
lint.ignore = ["E501"]
target-version = "py312"